# PolySI-PVLDB2023-Artifacts

./: README.md
artifact/: README.md
artifact/CobraVerifier/: README.md  jni.sh  pom.xml  run.sh
artifact/CobraVerifier/include/: gpu_GPUmm.cu  gpu_GPUmm.h
artifact/CobraVerifier/monosat/: .gitignore
artifact/CobraVerifier/patches/: 0001-Fix-compatibility-with-java11.patch  0002-Fix-compatibility-with-cuda11.patch  0004-Enable-cpu-connect.patch  (+2 more)
artifact/PolySI/: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  flake.nix  lombok.config  settings.gradle
artifact/dbcop/: Cargo.toml  README.md
artifact/dbcop/doc/: notes.txt
artifact/dbcop/docker/antidotedb/: Dockerfile  README.md  antidotedb.yml  compose_file_gen.rs  connect.erl  docker-compose.yml  template.yml
artifact/dbcop/docker/cockroachdb/: README.md  docker-compose.yml
artifact/dbcop/docker/galera/: README.md  docker-compose.yml
artifact/dbcop/docker/galera/arch/: Dockerfile  entrypoint.sh  galera.cnf
artifact/dbcop/docker/galera/centos/: Dockerfile  docker-compose.yml  entrypoint.sh
artifact/dbcop/docker/galera/swarm/: arch.yml  ubuntu.yml
artifact/dbcop/examples/: antidotedb.rs  cockroachdb.rs  galera.rs  history_duration.rs
artifact/dbcop/histories/yaml/: non_cc.yaml
artifact/dbcop/script/: multi.py  multitest.sh  stack_ip.py
artifact/dbcop/src/: lib.rs  main.rs
artifact/dbcop/src/consistency/: algo.rs  mod.rs  sat.rs  util.rs
artifact/dbcop/src/db/: cluster.rs  history.rs  mod.rs
artifact/dbcop/src/verifier/: mod.rs  util.rs
artifact/repro/: reproduce.sh
(+266 files in other folders)
